<resources>
    <string name="app_name">FIG - Festival de Inverno de Garanhuns</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_compartilhar">Compartilhar</string>
    <string name="action_search">Procurar</string>
    <string name="title_activity_palco">FIG - Palcos</string>
    <string name="title_activity_dia">Dia</string>
    <string name="navdrawer_title">Tudo sem propaganda é mais legal :)</string>
    <string name="navdrawer_subtitle">Festival de Inverno de Garanhuns</string>

    <string name="nav_home">Início</string>
    <string name="nav_rest">Restaurantes</string>
    <string name="nav_hot">Hotéis</string>
    <string name="nav_pontur">Pontos Turísticos</string>
    <string name="nav_mercado">Mercados</string>
    <string name="nav_hosp">Hospitais</string>
    <string name="nav_others">Outros</string>
    <string name="nav_contact">Contato</string>
    <string name="nav_info">Sobre</string>
    <string name="nav_polos">Polos</string>
    <string name="title_activity_hotel">Hotéis</string>
    <string name="title_activity_restaurante">Restaurantes</string>
    <string name="title_activity_mercado">Mercados</string>
    <string name="title_activity_ponto_turistico">Pontos Turísticos</string>
    <string name="title_activity_hospital">Hospitais</string>
    <string name="title_activity_sobre">Sobre</string>

    <string name="open_at_gmaps">Clique para abrir no Google Maps</string>

    <string name="tripadvisor">TripAdvisor:</string>
    <string name="booking">Booking:</string>
    <string name="trivago">Trivago:</string>
    <string name="avaliacoes">Avaliações:</string>
    <string name="nav_compartilhar">Compartilhar</string>
    <string name="nav_github">Projeto Open Source</string>
</resources>
