<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_rest"
            android:checkable="false"
            android:icon="@drawable/food"
            android:title="@string/nav_rest" />
        <item
            android:id="@+id/nav_hot"
            android:checkable="false"
            android:icon="@drawable/hotel"
            android:title="@string/nav_hot" />
        <item
            android:id="@+id/nav_pontur"
            android:checkable="false"
            android:icon="@drawable/pontoturistico"
            android:title="@string/nav_pontur" />
        <item
            android:id="@+id/nav_mercado"
            android:checkable="false"
            android:icon="@drawable/mercado"
            android:title="@string/nav_mercado" />
        <item
            android:id="@+id/nav_hosp"
            android:checkable="false"
            android:icon="@drawable/hospital"
            android:title="@string/nav_hosp" />
    </group>

    <item android:title="@string/nav_others">
        <menu>
            <item
                android:id="@+id/nav_contato"
                android:icon="@drawable/email"
                android:title="@string/nav_contact" />
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/information"
                android:title="@string/nav_info" />
        </menu>
    </item>
</menu>
